python/src/rulang/grammar/generated/BusinessRulesParser.py
# Generated from BusinessRules.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BusinessRulesParser ( Parser ):

    grammarFileName = "BusinessRules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'and'", "'or'", "'not'", "'in'", "<INVALID>", "'ret'", 
                     "'workflow'", "'contains_any'", "'contains_all'", "<INVALID>", 
                     "'contains'", "<INVALID>", "<INVALID>", "'matches'", 
                     "<INVALID>", "'exists'", "'=>'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'??'", "'?.'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NONE", "AND", "OR", 
                      "NOT", "IN", "NOT_IN", "RET", "WORKFLOW", "CONTAINS_ANY", 
                      "CONTAINS_ALL", "NOT_CONTAINS", "CONTAINS", "STARTS_WITH", 
                      "ENDS_WITH", "MATCHES", "IS_EMPTY", "EXISTS", "ARROW", 
                      "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "PLUS", "MINUS", 
                      "STAR", "SLASH", "MOD", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "NULL_COALESCE", "NULL_SAFE_DOT", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "DOT", 
                      "COMMA", "SEMICOLON", "NUMBER", "STRING", "IDENTIFIER", 
                      "WS", "LINE_COMMENT" ]

    RULE_rule_ = 0
    RULE_condition = 1
    RULE_orExpr = 2
    RULE_andExpr = 3
    RULE_notExpr = 4
    RULE_comparison = 5
    RULE_nullCoalesce = 6
    RULE_addExpr = 7
    RULE_mulExpr = 8
    RULE_unaryExpr = 9
    RULE_primary = 10
    RULE_functionCall = 11
    RULE_literal = 12
    RULE_list_ = 13
    RULE_path = 14
    RULE_pathSegment = 15
    RULE_workflowCall = 16
    RULE_actions = 17
    RULE_action = 18
    RULE_returnStmt = 19
    RULE_assignment = 20
    RULE_assignOp = 21

    ruleNames =  [ "rule_", "condition", "orExpr", "andExpr", "notExpr", 
                   "comparison", "nullCoalesce", "addExpr", "mulExpr", "unaryExpr", 
                   "primary", "functionCall", "literal", "list_", "path", 
                   "pathSegment", "workflowCall", "actions", "action", "returnStmt", 
                   "assignment", "assignOp" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NONE=3
    AND=4
    OR=5
    NOT=6
    IN=7
    NOT_IN=8
    RET=9
    WORKFLOW=10
    CONTAINS_ANY=11
    CONTAINS_ALL=12
    NOT_CONTAINS=13
    CONTAINS=14
    STARTS_WITH=15
    ENDS_WITH=16
    MATCHES=17
    IS_EMPTY=18
    EXISTS=19
    ARROW=20
    EQ=21
    NEQ=22
    LTE=23
    GTE=24
    LT=25
    GT=26
    PLUS=27
    MINUS=28
    STAR=29
    SLASH=30
    MOD=31
    ASSIGN=32
    PLUS_ASSIGN=33
    MINUS_ASSIGN=34
    STAR_ASSIGN=35
    SLASH_ASSIGN=36
    NULL_COALESCE=37
    NULL_SAFE_DOT=38
    LPAREN=39
    RPAREN=40
    LBRACKET=41
    RBRACKET=42
    DOT=43
    COMMA=44
    SEMICOLON=45
    NUMBER=46
    STRING=47
    IDENTIFIER=48
    WS=49
    LINE_COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Rule_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(BusinessRulesParser.ConditionContext,0)


        def ARROW(self):
            return self.getToken(BusinessRulesParser.ARROW, 0)

        def actions(self):
            return self.getTypedRuleContext(BusinessRulesParser.ActionsContext,0)


        def EOF(self):
            return self.getToken(BusinessRulesParser.EOF, 0)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_rule_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_" ):
                listener.enterRule_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_" ):
                listener.exitRule_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_" ):
                return visitor.visitRule_(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = BusinessRulesParser.Rule_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rule_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.condition()
            self.state = 45
            self.match(BusinessRulesParser.ARROW)
            self.state = 46
            self.actions()
            self.state = 47
            self.match(BusinessRulesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.OrExprContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = BusinessRulesParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.AndExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.OR)
            else:
                return self.getToken(BusinessRulesParser.OR, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def orExpr(self):

        localctx = BusinessRulesParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.andExpr()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 52
                self.match(BusinessRulesParser.OR)
                self.state = 53
                self.andExpr()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.NotExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.NotExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.AND)
            else:
                return self.getToken(BusinessRulesParser.AND, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)




    def andExpr(self):

        localctx = BusinessRulesParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.notExpr()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 60
                self.match(BusinessRulesParser.AND)
                self.state = 61
                self.notExpr()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(BusinessRulesParser.NOT, 0)

        def notExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.NotExprContext,0)


        def comparison(self):
            return self.getTypedRuleContext(BusinessRulesParser.ComparisonContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_notExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)




    def notExpr(self):

        localctx = BusinessRulesParser.NotExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_notExpr)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(BusinessRulesParser.NOT)
                self.state = 68
                self.notExpr()
                pass
            elif token in [1, 2, 3, 10, 28, 39, 41, 46, 47, 48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.comparison()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nullCoalesce(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.NullCoalesceContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.NullCoalesceContext,i)


        def EQ(self):
            return self.getToken(BusinessRulesParser.EQ, 0)

        def NEQ(self):
            return self.getToken(BusinessRulesParser.NEQ, 0)

        def LT(self):
            return self.getToken(BusinessRulesParser.LT, 0)

        def GT(self):
            return self.getToken(BusinessRulesParser.GT, 0)

        def LTE(self):
            return self.getToken(BusinessRulesParser.LTE, 0)

        def GTE(self):
            return self.getToken(BusinessRulesParser.GTE, 0)

        def IN(self):
            return self.getToken(BusinessRulesParser.IN, 0)

        def NOT_IN(self):
            return self.getToken(BusinessRulesParser.NOT_IN, 0)

        def CONTAINS(self):
            return self.getToken(BusinessRulesParser.CONTAINS, 0)

        def NOT_CONTAINS(self):
            return self.getToken(BusinessRulesParser.NOT_CONTAINS, 0)

        def STARTS_WITH(self):
            return self.getToken(BusinessRulesParser.STARTS_WITH, 0)

        def ENDS_WITH(self):
            return self.getToken(BusinessRulesParser.ENDS_WITH, 0)

        def MATCHES(self):
            return self.getToken(BusinessRulesParser.MATCHES, 0)

        def CONTAINS_ANY(self):
            return self.getToken(BusinessRulesParser.CONTAINS_ANY, 0)

        def CONTAINS_ALL(self):
            return self.getToken(BusinessRulesParser.CONTAINS_ALL, 0)

        def IS_EMPTY(self):
            return self.getToken(BusinessRulesParser.IS_EMPTY, 0)

        def EXISTS(self):
            return self.getToken(BusinessRulesParser.EXISTS, 0)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = BusinessRulesParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.nullCoalesce()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 132120960) != 0):
                    self.state = 73
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 132120960) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 74
                    self.nullCoalesce()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.nullCoalesce()
                self.state = 78
                self.match(BusinessRulesParser.CONTAINS)
                self.state = 79
                self.nullCoalesce()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.nullCoalesce()
                self.state = 82
                self.match(BusinessRulesParser.NOT_CONTAINS)
                self.state = 83
                self.nullCoalesce()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.nullCoalesce()
                self.state = 86
                self.match(BusinessRulesParser.STARTS_WITH)
                self.state = 87
                self.nullCoalesce()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.nullCoalesce()
                self.state = 90
                self.match(BusinessRulesParser.ENDS_WITH)
                self.state = 91
                self.nullCoalesce()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.nullCoalesce()
                self.state = 94
                self.match(BusinessRulesParser.MATCHES)
                self.state = 95
                self.nullCoalesce()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.nullCoalesce()
                self.state = 98
                self.match(BusinessRulesParser.CONTAINS_ANY)
                self.state = 99
                self.nullCoalesce()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self.nullCoalesce()
                self.state = 102
                self.match(BusinessRulesParser.CONTAINS_ALL)
                self.state = 103
                self.nullCoalesce()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 105
                self.nullCoalesce()
                self.state = 106
                self.match(BusinessRulesParser.IS_EMPTY)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 108
                self.nullCoalesce()
                self.state = 109
                self.match(BusinessRulesParser.EXISTS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NullCoalesceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.AddExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.AddExprContext,i)


        def NULL_COALESCE(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.NULL_COALESCE)
            else:
                return self.getToken(BusinessRulesParser.NULL_COALESCE, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_nullCoalesce

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullCoalesce" ):
                listener.enterNullCoalesce(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullCoalesce" ):
                listener.exitNullCoalesce(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullCoalesce" ):
                return visitor.visitNullCoalesce(self)
            else:
                return visitor.visitChildren(self)




    def nullCoalesce(self):

        localctx = BusinessRulesParser.NullCoalesceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nullCoalesce)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.addExpr()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 114
                self.match(BusinessRulesParser.NULL_COALESCE)
                self.state = 115
                self.addExpr()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.MulExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.MulExprContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.PLUS)
            else:
                return self.getToken(BusinessRulesParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.MINUS)
            else:
                return self.getToken(BusinessRulesParser.MINUS, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_addExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)




    def addExpr(self):

        localctx = BusinessRulesParser.AddExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_addExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.mulExpr()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27 or _la==28:
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==27 or _la==28):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.mulExpr()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.UnaryExprContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.STAR)
            else:
                return self.getToken(BusinessRulesParser.STAR, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.SLASH)
            else:
                return self.getToken(BusinessRulesParser.SLASH, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.MOD)
            else:
                return self.getToken(BusinessRulesParser.MOD, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_mulExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulExpr" ):
                listener.enterMulExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulExpr" ):
                listener.exitMulExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExpr" ):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)




    def mulExpr(self):

        localctx = BusinessRulesParser.MulExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mulExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.unaryExpr()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0):
                self.state = 130
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 131
                self.unaryExpr()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(BusinessRulesParser.MINUS, 0)

        def unaryExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.UnaryExprContext,0)


        def primary(self):
            return self.getTypedRuleContext(BusinessRulesParser.PrimaryContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_unaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return visitor.visitUnaryExpr(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpr(self):

        localctx = BusinessRulesParser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unaryExpr)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(BusinessRulesParser.MINUS)
                self.state = 138
                self.unaryExpr()
                pass
            elif token in [1, 2, 3, 10, 39, 41, 46, 47, 48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(BusinessRulesParser.LPAREN, 0)

        def orExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.OrExprContext,0)


        def RPAREN(self):
            return self.getToken(BusinessRulesParser.RPAREN, 0)

        def literal(self):
            return self.getTypedRuleContext(BusinessRulesParser.LiteralContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(BusinessRulesParser.FunctionCallContext,0)


        def path(self):
            return self.getTypedRuleContext(BusinessRulesParser.PathContext,0)


        def workflowCall(self):
            return self.getTypedRuleContext(BusinessRulesParser.WorkflowCallContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary" ):
                return visitor.visitPrimary(self)
            else:
                return visitor.visitChildren(self)




    def primary(self):

        localctx = BusinessRulesParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primary)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(BusinessRulesParser.LPAREN)
                self.state = 143
                self.orExpr()
                self.state = 144
                self.match(BusinessRulesParser.RPAREN)
                pass
